--- a/login/static/style.css
+++ b/login/static/style.css
@@ -20,13 +20,41 @@
 }
 
 .btn {
+	display: flex;
 	padding: 10px 40px;
-	background-color: #090b0c; 
+	margin: 10px;
+	background-color: #0c0e0f; 
 	color: #FFFFFF;
 	font-weight: bold;
 	border-radius: 10px;
 }
-
+.btn:hover {
+	display: flex;
+	padding: 10px 40px;
+	margin: 10px;
+	background-color: rgb(170, 203, 164); 
+	color: #262424;
+	font-weight: bold;
+	border-radius: 10px;
+}
+.lbtn {
+	display: flex;
+	padding: 10px 40px;
+	margin: 10px;
+	background-color: rgb(112, 6, 6); 
+	color: #FFFFFF;
+	font-weight: bold;
+	border-radius: 10px;
+}
+.lbtn:hover {
+	display: flex;
+	padding: 10px 40px;
+	margin: 10px;
+	background-color: rgb(153, 10, 10); 
+	color: #FFFFFF;
+	font-weight: bold;
+	border-radius: 10px;
+}
 .textbox{
 	padding: 10px 40px;
 	background-color: #9e9e9e; 
