--- a/login/templates/issues.html
+++ b/login/templates/issues.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='issue.css') }}">
 
     <title>Issue Tracker</title>
+    <a href="{{ url_for('profile') }}" class="btn">My Profile</a>
 </head>
 <body>
     <h1>Issue Tracker</h1>
@@ -29,7 +30,7 @@
                 <td>{{ issue.id }}</td>
                 <td>{{ issue.title }}</td>
                 <td>{{ issue.description }}</td>
-                <td>{{ issue.status }}</td>
+                <td class="{% if issue.status == 'Open' %}status-open{% elif issue.status == 'In Progress' %}status-in-progress{% elif issue.status == 'Resolved' %}status-resolved{% endif %}">{{ issue.status }}</td>
                 <td>{{ issue.priority }}</td>
                 <td>{{ issue.severity }}</td>
                 <td>{{ issue.assigned_to }}</td>
