--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -14,8 +14,10 @@
 				<h3 class="bottom">
 					Hi {{session.username}}!!</br></br> Welcome to the index page...				 
 				</h3></br></br></br>
+				<a href="{{ url_for('profile') }}" class="btn">My Profile</a>
 				<a href="{{ url_for('display_issues') }}" class="btn">Go to Issues</a>
-				<a href="{{ url_for('logout') }}" class="btn">Logout</a>
+				<br>
+				<a href="{{ url_for('logout') }}" class="lbtn">Logout</a>
 				
 		</div>
 		</div>
