Added logs.html, updated buttons

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -16,6 +16,7 @@
 				</h3></br></br></br>
 				<a href="{{ url_for('profile') }}" class="btn">My Profile</a>
 				<a href="{{ url_for('display_issues') }}" class="btn">Go to Issues</a>
+				<a href="{{url_for('display_logs')}}" class="btn">Logs</a>
 				<br>
 				<a href="{{ url_for('logout') }}" class="lbtn">Logout</a>
 				
