--- a/login/static/issue.css
+++ b/login/static/issue.css
@@ -37,7 +37,7 @@ th {
 
 /* Add styling to the "Go to Issues" button */
 .btn {
-    display: inline-block;
+    display: block;
     padding: 10px 20px;
     margin-top: 20px;
     background-color: #A6CF98;
@@ -67,4 +67,17 @@ th {
 .status-resolved {
     background-color: #80B3FF; /* Blue for "Resolved" status */
     color: #fff; 
+}
+.btn1{
+padding: 10px 20px;
+margin-top: 20px;
+background-color: #A6CF98;
+color: white;
+text-decoration: none;
+font-weight: bold;
+border-radius: 5px;
+transition: background-color 0.3s;
+position: absolute;
+top: 60px;
+right: 10px;
 }
