--- a/login/templates/logs.html
+++ b/login/templates/logs.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='logs.css') }}">
     <title>Logs</title>
 </head>
 <body>
     <h1>Logs</h1>
+    <div class="btn-container">
+        <a href="{{ url_for('profile') }}" class="btn">My Profile</a>
+        <a href="{{ url_for('display_issues') }}" class="btn">All Issues</a>
+    </div>
+    
     <table border="1">
         <thead>
             <tr>
@@ -19,10 +25,10 @@
         <tbody>
             {% for log in logs %}
                 <tr>
-                    <td>{{ log[0] }}</td>
-                    <td>{{ log[1] }}</td>
-                    <td>{{ log[2] }}</td>
-                    <td>{{ log[3] }}</td>
+                    <td>{{ log.logs_id }}</td>
+                    <td>{{ log.commit_message }}</td>
+                    <td>{{ log.username }}</td>
+                    <td>{{ log.issue_title }}</td>
                 </tr>
             {% endfor %}
         </tbody>
