--- a/login/templates/profile.html
+++ b/login/templates/profile.html
@@ -11,6 +11,7 @@
 <body>
     <h1>User Profile</h1>
     <a href="{{ url_for('display_issues') }}" class="btn">All Issues</a>
+    <a href="{{ url_for('display_logs') }}" class="btn1">Logs</a>
     <p><h2>Welcome, {{ session.username }}!</h2></p>
 
     <!-- Display assigned issues -->
