--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -17,6 +17,8 @@
 					<input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox"/></br></br>
 					<input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox"/></br></br>
 					<input id="email" name="email" type="text" placeholder="Enter Your Email ID" class="textbox"/></br></br>
+					<label for="role">Register as Admin:</label>
+					<input type="checkbox" name="role" value="admin"><br><br>
 					<input type="submit" class="btn" value="Sign Up"></br>
 				</form>
 			</h2>
