--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,26 +1,26 @@
-
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title> Bug Tracker </title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">					 
-	</head>
-	<body></br></br></br></br></br>
-		<div align="center">
-		<div align="center" class="border">
-			<div class="header">
-				<h2 class="word">Bug Tracker</h2>
-			</div></br></br></br>
-				<h3 class="bottom">
-					Hi {{session.username}}!!</br></br> Welcome to the index page...				 
-				</h3></br></br></br>
-				<a href="{{ url_for('profile') }}" class="btn">My Profile</a>
-				<a href="{{ url_for('display_issues') }}" class="btn">Go to Issues</a>
-				<a href="{{url_for('display_logs')}}" class="btn">Logs</a>
-				<br>
-				<a href="{{ url_for('logout') }}" class="lbtn">Logout</a>
-				
-		</div>
-		</div>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <title> Bug Tracker </title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">					 
+    </head>
+    <body></br></br></br></br></br>
+        <div align="center">
+            <div align="center" class="border">
+                <div class="header">
+                    <h2 class="word">Bug Tracker</h2>
+                </div></br></br></br>		
+                <a href="{{ url_for('profile') }}" class="btn">My Profile</a>
+                <a href="{{ url_for('display_issues') }}" class="btn">Go to Issues</a>
+                <a href="{{url_for('display_logs')}}" class="btn">Logs</a>
+                
+                {% if session['role'] == 'admin' %}
+                    <a href="{{ url_for('admin_dashboard') }}" class="btn">Admin Dashboard</a>
+                {% endif %}
+                
+                <br>
+                <a href="{{ url_for('logout') }}" class="lbtn">Logout</a>
+            </div>
+        </div>
+    </body>
 </html>
