--- a/login/templates/profile.html
+++ b/login/templates/profile.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='issue.css') }}">
 </head>
 <body>
+
+    <div class="bcontainer">
+        <a href="{{ url_for('display_issues') }}" class="btn">All Issues</a>
+        <a href="{{ url_for('display_logs') }}" class="btn1">Logs</a>
+    </div>
     <h1>User Profile</h1>
-    <a href="{{ url_for('display_issues') }}" class="btn">All Issues</a>
-    <a href="{{ url_for('display_logs') }}" class="btn1">Logs</a>
     <p><h2>Welcome, {{ session.username }}!</h2></p>
 
     <!-- Display assigned issues -->
